@@ -68,4 +68,18 @@ public class ChoiceViewMockup implements IDisplay, IOptionMockupListener {
 	}
 
 
+	@Override
+	public void show() {
+		// TODO Auto-generated method stub
+		
+	}
+
+
+	@Override
+	public void hide() {
+		// TODO Auto-generated method stub
+		
+	}
+
+
 }
